--- a/Sentiment_Analysis_Amazon_Alexa_Reviews.ipynb
+++ b/Sentiment_Analysis_Amazon_Alexa_Reviews.ipynb
@@ -21,14 +21,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "source": [],
+      "metadata": {
+        "id": "uoEOUseP4bSK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/jasmine1601/Sentiment-Analysis-using-SVM.git"
+      ],
+      "metadata": {
+        "id": "JCqD8cgZ397_",
+        "outputId": "ec92da5c-92bf-4a21-d2fb-fb1a38a61959",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'Sentiment-Analysis-using-SVM'...\n",
+            "remote: Enumerating objects: 73, done.\u001b[K\n",
+            "remote: Counting objects: 100% (44/44), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (29/29), done.\u001b[K\n",
+            "remote: Total 73 (delta 28), reused 15 (delta 15), pack-reused 29 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (73/73), 676.24 KiB | 9.26 MiB/s, done.\n",
+            "Resolving deltas: 100% (28/28), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
         "id": "1_J2tXIE3izi",
-        "outputId": "5ce4638e-3df7-467d-92d0-edf2fb88fcbb"
+        "outputId": "b2e469b3-d8af-402a-ec49-6a0f4b864edb"
       },
       "outputs": [
         {
@@ -51,7 +89,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-557696de-2de0-4fe2-8829-f74cabb01ef0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-96a900f9-804f-43bd-b0ba-8467ea68d3dc\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -124,7 +162,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-557696de-2de0-4fe2-8829-f74cabb01ef0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-96a900f9-804f-43bd-b0ba-8467ea68d3dc')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -176,12 +214,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-557696de-2de0-4fe2-8829-f74cabb01ef0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-96a900f9-804f-43bd-b0ba-8467ea68d3dc button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-557696de-2de0-4fe2-8829-f74cabb01ef0');\n",
+              "        const element = document.querySelector('#df-96a900f9-804f-43bd-b0ba-8467ea68d3dc');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -201,8 +239,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-25b17f93-8311-4189-ad38-ce86237b4b7f\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-25b17f93-8311-4189-ad38-ce86237b4b7f')\"\n",
+              "<div id=\"df-c40dac01-521e-4108-8be2-ac4707e6e54b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c40dac01-521e-4108-8be2-ac4707e6e54b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -321,7 +359,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-25b17f93-8311-4189-ad38-ce86237b4b7f button');\n",
+              "        document.querySelector('#df-c40dac01-521e-4108-8be2-ac4707e6e54b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -338,7 +376,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 3
         }
       ],
       "source": [
@@ -351,31 +389,82 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 272
         },
         "id": "cc9YNLlyF_gt",
-        "outputId": "d177dc9f-686a-42dd-cafa-d41434f1aaaf"
+        "outputId": "e8159807-9203-4c3b-fdea-5decd0f7da2b"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
+              "rating\n",
               "5    2286\n",
               "4     455\n",
               "1     161\n",
               "3     152\n",
               "2      96\n",
-              "Name: rating, dtype: int64"
+              "Name: count, dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>rating</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>2286</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>455</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>161</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>152</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>96</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
             ]
           },
-          "execution_count": 12,
-          "metadata": {
-            "tags": []
-          },
-          "output_type": "execute_result"
+          "metadata": {},
+          "execution_count": 4
         }
       ],
       "source": [
@@ -518,7 +607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "HTS3IkpqDfvw"
       },
@@ -557,7 +646,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -949,7 +1038,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "-HkWNybPKMR8"
       },
@@ -963,7 +1052,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -990,7 +1079,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1029,7 +1118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "id": "eCu1PUcfM4G-"
       },
@@ -1043,7 +1132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1081,7 +1170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1108,7 +1197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1136,7 +1225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1168,7 +1257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1194,7 +1283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1230,7 +1319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1260,7 +1349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "id": "aVI0YNY_XBhX",
         "outputId": "b6b9b798-48be-4937-b2bf-a63e1becc673",
@@ -1293,7 +1382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "id": "7SsthYThXBhY",
         "outputId": "6a3f1fd2-1551-45b8-9849-c10e6eadeb68",
@@ -1332,7 +1421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1373,7 +1462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "id": "9RD4OjOreZ5x",
         "outputId": "a08029e6-cbcc-42af-cbd1-e10716fcb535",
@@ -1402,7 +1491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1429,7 +1518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "id": "JNqmKMrqX1Ss"
       },
